[+] Созданы экраны PrivacyPolicyFragment, UserAgreementFragment, HelpFragment. Создан диалог AccountExitDialog. Сделан частичный редизайн приложения: изменение цветов карточек в профиле, фон экранов Поиска и Создания поездок.

--- a/app/src/main/res/layout/block_settings_theme.xml
+++ b/app/src/main/res/layout/block_settings_theme.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView style="@style/ProfileCardViewStyle"
+<com.google.android.material.card.MaterialCardView style="@style/SettingsCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,24 +8,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="26dp">
+        android:layout_height="@dimen/settings_block_inner_height">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/appCompatTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/settings_theme_option_title"
-            android:textAppearance="@style/CardMediumTextStyle"
+            android:textAppearance="@style/AppMediumTextStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="@dimen/icon_size_24"
             android:checked="true"
-            app:trackTint="@color/md_theme_primaryContainer"
-            app:thumbTint="@color/md_theme_primary"
+            android:scaleY="1"
+            app:thumbIcon="@drawable/theme_switcher_thumb_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
