--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,10 +71,21 @@
     </style>
 
     <style name="ProfileCardViewStyle" parent="Widget.Material3.CardView.Filled">
-        <item name="cardBackgroundColor">@color/md_theme_inverseOnSurface</item>
+        <item name="cardBackgroundColor">@color/theme_primary_bg</item>
         <item name="contentPadding">@dimen/padding_medium</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
+        <item name="contentPaddingTop">@dimen/padding_small</item>
+        <item name="contentPaddingBottom">@dimen/padding_small</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="cardCornerRadius">@dimen/card_corner_medium</item>
+    </style>
+
+    <style name="SettingsCardViewStyle" parent="Widget.Material3.CardView.Filled">
+        <item name="cardBackgroundColor">@color/theme_primary_bg</item>
+        <item name="contentPadding">@dimen/padding_medium</item>
+        <item name="android:clickable">false</item>
+        <item name="android:focusable">false</item>
         <item name="contentPaddingTop">@dimen/padding_small</item>
         <item name="contentPaddingBottom">@dimen/padding_small</item>
         <item name="strokeWidth">0dp</item>
@@ -201,6 +212,20 @@
         <item name="android:inputType">textCapSentences|textAutoComplete</item>
         <item name="android:lines">1</item>
         <item name="android:paddingVertical">0dp</item>
+        <item name="android:textAppearance">@style/TextFieldTextStyle</item>
+    </style>
+
+    <style name="WriteUsEditTextStyle">
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:lines">5</item>
+        <item name="android:minLines">3</item>
+        <item name="android:maxLines">6</item>
+        <item name="android:scrollbars">vertical</item>
+        <item name="android:overScrollMode">always</item>
+        <item name="android:maxLength">@integer/write_us_message_length</item>
+        <item name="android:gravity">top|start</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:paddingVertical">@dimen/padding_small</item>
         <item name="android:textAppearance">@style/TextFieldTextStyle</item>
     </style>
 </resources>
