--- a/app/src/main/res/drawable/new_trip_bg_gradient.xml
+++ b/app/src/main/res/drawable/new_trip_bg_gradient.xml
@@ -2,8 +2,8 @@
 <shape>
     <gradient xmlns:android="http://schemas.android.com/apk/res/android"
         android:angle="90"
+        android:endColor="@color/theme_primary_bg"
         android:centerColor="@color/md_theme_background"
-        android:endColor="@color/green_bg"
         android:startColor="@color/md_theme_background"
         android:type="linear" />
 </shape>
