--- a/app/src/main/res/layout/block_settings_language.xml
+++ b/app/src/main/res/layout/block_settings_language.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView style="@style/ProfileCardViewStyle"
+<com.google.android.material.card.MaterialCardView style="@style/SettingsCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,30 +8,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="26dp">
+        android:layout_height="@dimen/settings_block_inner_height">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/appCompatTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/settings_language_option_title"
-            android:textAppearance="@style/CardMediumTextStyle"
+            android:textAppearance="@style/AppMediumTextStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/flagImageView"
             android:layout_width="@dimen/icon_size_24"
             android:layout_height="@dimen/icon_size_24"
             android:layout_gravity="center"
             android:layout_marginEnd="@dimen/margin_small"
             android:src="@drawable/flag_tajikistan"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/appCompatTextView2"
+            app:layout_constraintEnd_toStartOf="@+id/languageTextView"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/appCompatTextView2"
+            android:id="@+id/languageTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="@style/GreyDescriptionTextStyle"
@@ -40,5 +41,13 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Точики" />
 
+        <View
+            android:id="@+id/clickableView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/languageTextView"
+            app:layout_constraintStart_toStartOf="@id/flagImageView"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
