[+] Создан экран добавления машины NewCarFragment. Добавлена навигация в NewCarFragment в графы навигации.

--- a/app/src/main/res/layout/block_car_info.xml
+++ b/app/src/main/res/layout/block_car_info.xml
@@ -46,7 +46,7 @@
                 android:layout_gravity="center"
                 android:textAppearance="@style/GeologicaMed12"
                 android:textColor="@color/white"
-                tools:text="Mercedes Benz C200" />
+                tools:text="Mercedes Benz, C200, 2007г" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
 
