--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,6 +102,12 @@
         <item name="strokeWidth">1dp</item>
         <item name="cardCornerRadius">@dimen/card_corner_medium</item>
     </style>
+
+    <style name="ImageCardViewStyle" parent="Widget.Material3.CardView.Filled">
+        <item name="cardBackgroundColor">@color/md_theme_background</item>
+        <item name="contentPadding">0dp</item>
+    </style>
+
     <style name="ProfileImageCardViewStyle" parent="Widget.Material3.CardView.Filled">
         <item name="cardBackgroundColor">@color/md_theme_background</item>
         <item name="contentPadding">0dp</item>
