[~] Рефакторинг дизайна приложения

--- a/app/src/main/res/layout/block_plus_minus_big.xml
+++ b/app/src/main/res/layout/block_plus_minus_big.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/fab_size_32"
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
-        app:icon="@drawable/minus"
+        app:icon="@drawable/minus_big"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:icon="@drawable/plus"
+        app:icon="@drawable/plus_big"
         tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
