--- a/app/src/main/res/layout/block_plus_minus_big_text_field.xml
+++ b/app/src/main/res/layout/block_plus_minus_big_text_field.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/fab_size_32"
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
-        app:icon="@drawable/minus"
+        app:icon="@drawable/minus_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +45,7 @@
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/margin_small"
-        app:icon="@drawable/plus"
+        app:icon="@drawable/plus_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
