--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,6 +57,7 @@
     <dimen name="my_cars_car_image_size">90dp</dimen>
     <dimen name="item_my_car_height">106dp</dimen>
     <dimen name="settings_block_inner_height">32dp</dimen>
+    <dimen name="new_car_car_image_size">200dp</dimen>
 
 
 </resources>
