--- a/app/src/main/res/color/grey_clickable_text_color.xml
+++ b/app/src/main/res/color/grey_clickable_text_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/md_theme_onBackground" android:state_pressed="true" />
-    <item android:color="@color/md_theme_primary" />
+    <item android:color="@color/grey_text_focus" />
 </selector>
