--- a/app/src/main/res/layout/block_plus_minus.xml
+++ b/app/src/main/res/layout/block_plus_minus.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/fab_size_32"
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
-        app:icon="@drawable/minus"
+        app:icon="@drawable/minus_big"
         tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -41,7 +41,7 @@
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/margin_small"
-        app:icon="@drawable/plus"
+        app:icon="@drawable/plus_big"
         tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
