--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -125,8 +125,11 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/margin_small"
                     android:text="@string/help_add_file_text"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:textColor="@color/grey_clickable_text_color"
+                    android:paddingVertical="@dimen/margin_extra_small"
                     android:textAppearance="@style/GreyDescriptionTextStyle"
-                    android:textSize="14sp"
                     tools:ignore="TextContrastCheck" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
