--- a/app/src/main/res/layout/fragment_my_cars.xml
+++ b/app/src/main/res/layout/fragment_my_cars.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
@@ -21,26 +21,40 @@
         android:id="@+id/carsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_my_car"
-        android:paddingTop="@dimen/padding_small"
-        tools:itemCount="0"
         android:paddingHorizontal="@dimen/padding_small"
+        android:paddingTop="@dimen/padding_small"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:itemCount="0"
+        tools:listitem="@layout/item_my_car" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/addCarButton"
-        style="@style/OutlinedButtonStyle"
-        android:layout_width="@dimen/button_max_width"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="@string/my_cars_add_car_button_text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/carsRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/carsRecyclerView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/noCarsText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/my_cars_no_cars_text"
+            android:textAlignment="center"
+            android:textAppearance="@style/GreyInfoTextStyle" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/addCarButton"
+            style="@style/TextButtonStyle"
+            android:layout_width="@dimen/button_max_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/my_cars_add_car_button_text"
+            android:visibility="visible" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
