--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -19,23 +19,24 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_medium"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="@dimen/padding_under_scroll_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:visibility="gone"
+            android:layout_height="@dimen/new_car_car_image_size">
 
             <com.google.android.material.card.MaterialCardView
                 style="@style/Widget.Material3.CardView.Elevated"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_gravity="start"
+                android:layout_gravity="start|center_vertical"
                 android:clickable="true"
                 android:focusable="true"
                 app:cardBackgroundColor="@color/md_theme_secondaryContainer"
@@ -65,10 +66,11 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/imageCard"
             style="@style/ImageCardViewStyle"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            app:cardBackgroundColor="@color/background_blur"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/new_car_car_image_size"
             android:layout_gravity="center"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:visibility="visible">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -77,7 +79,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                tools:src="@tools:sample/backgrounds/scenic" />
+                android:src="@drawable/mers"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -106,7 +108,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/brandInputLayout"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            style="@style/DropdownAutocompleteInputLayoutStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -121,8 +123,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/modelInputLayout"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:visibility="gone"
+            style="@style/DropdownAutocompleteInputLayoutStyle"
+            android:visibility="visible"
             tools:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -140,15 +142,15 @@
             android:id="@+id/yearAndColorLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:visibility="visible">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/yearInputLayout"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                style="@style/DropdownAutocompleteInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="0.6">
 
                 <AutoCompleteTextView
                     android:id="@+id/yearAutocompleteTextView"
@@ -165,10 +167,10 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/colorInputLayout"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                style="@style/DropdownAutocompleteInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="0.4">
 
                 <AutoCompleteTextView
                     android:id="@+id/colorAutocompleteTextView"
@@ -180,55 +182,87 @@
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin_large_32"
-            android:orientation="horizontal">
+            android:layout_height="@dimen/margin_medium"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/cancelButton"
-                style="@style/OutlinedButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/button_height"
-                android:contentDescription="@null"
-                android:text="@string/cancel_button_text"
-                app:iconGravity="textStart"
-                app:iconSize="@dimen/fab_size_32"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/divider"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize"
-                tools:visibility="visible" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/seatsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="@dimen/margin_medium"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/new_car_car_seats_hint"
+            android:textSize="14sp"
+            android:textAppearance="@style/GreyDescriptionTextStyle"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/addButton"
-                style="@style/FilledButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/button_height"
-                android:contentDescription="@null"
-                android:enabled="false"
-                android:text="@string/new_car_add_button_text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/divider"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize"
-                tools:visibility="visible" />
+        <include
+            android:id="@+id/seatsCountBlock"
+            android:layout_marginHorizontal="@dimen/margin_medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            layout="@layout/block_plus_minus_big"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/buttonsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/margin_small"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/margin_medium"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            android:id="@+id/cancelButton"-->
+<!--            style="@style/OutlinedButtonStyle"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="@dimen/button_height"-->
+<!--            android:contentDescription="@null"-->
+<!--            android:text="@string/cancel_button_text"-->
+<!--            app:iconGravity="textStart"-->
+<!--            app:iconSize="@dimen/fab_size_32"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/divider"-->
+<!--            app:layout_constraintHorizontal_bias="0.5"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize"-->
+<!--            tools:visibility="visible" />-->
+
+<!--        <View-->
+<!--            android:id="@+id/divider"-->
+<!--            android:layout_width="@dimen/margin_medium"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/addButton"
+            style="@style/FilledButtonStyle"
+            android:layout_width="@dimen/button_max_width"
+            android:layout_height="@dimen/button_height"
+            android:contentDescription="@null"
+            android:enabled="false"
+            android:text="@string/new_car_add_button_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize"
+            tools:visibility="visible" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
