--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/search_bg_gradient">
+    android:background="@drawable/bg_gradient">
 
     <com.google.android.material.card.MaterialCardView
         style="@style/SearchCardViewStyle"
