--- a/app/src/main/res/layout/fragment_user_agreement.xml
+++ b/app/src/main/res/layout/fragment_user_agreement.xml
@@ -18,6 +18,7 @@
         app:titleTextAppearance="@style/ToolbarTextStyle" />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +54,7 @@
                 android:layout_width="@dimen/fab_size_32"
                 android:layout_height="@dimen/fab_size_32"
                 android:layout_gravity="end"
-                android:layout_marginHorizontal="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium"
                 android:layout_marginVertical="@dimen/margin_medium"
                 android:textAlignment="inherit"
                 app:icon="@drawable/arrow_up"
